# DeathRoadToBaldness

./: .gitignore
000.Misc/: USTCCTF-WithYY-Captcha.py  bookmark.js  fxxkEng.py  fyy.py  main.py  output.txt  router.py  searchBook.user.js  test.js  text.txt  toReplace.js  toReplacebk.js  unipus.example.user.js  unipus.user.js
001.ThinkC/: arrayQuestion.c  cpp.cpp  exercise.c  factorial.c  factorial_v2.c  factorial_v3.c  float.c  gcd.c  objectTime.cpp  primeNumber.c  primeNumber_v2.c  primeNumber_v3.c  printHist.c  recursive_function.c  smaller.c  test.c  test1.c
002.CLRS/: search.py
004.CINTA/: GF.py  HW1.cpp  HW2_fibonacci.py  HW2_gcd.py  HW2_mod_power.cpp  HW3.py  SummerCode.c  primitive_root.py  towerOfHanoi.cpp
005.Sec/: Diffie-Hellman.py  ElGamal.py
100.Ketangpai/: 001_ktp.c  001_ktp.cpp  002_ktp.c  002_ktp.cpp  003_ktp.c  004_ktp.c  006_binary.c  007_perfectNumber.c  008_singleNumber.c  010_sort_mem.c  011_linked_list.cpp  012_queue.cpp  012_stack.cpp  013_bst.cpp  014_max_sum_descent.cpp
101.Homework/Programming_exp/简单生态系统仿真/: CMakeLists.txt  basic.h  empty.cpp  empty.h  fox.cpp  fox.h  grass.cpp  grass.h  human.cpp  human.h  living.h  main.cpp  rabbit.cpp  rabbit.h  scene.cpp  scene.h  world.cpp  world.h
200.Leetcode/: 125.验证回文串.cpp  13.罗马数字转整数.cpp  14.最长公共前缀.cpp  202_happyNumber.c  206.反转链表.cpp  21.合并两个有序链表.cpp  24.两两交换链表中的节点.cpp  26.删除有序数组中的重复项.cpp  27.移除元素.cpp  278.First_Bad_Version.cpp  344.反转字符串.cpp  35.Search_Insert_Position.cpp  7.整数反转.cpp  704.binary_search.cpp  74.搜索二维矩阵.cpp  80.删除有序数组中的重复项-ii.cpp  808.分汤.cpp  809.情感丰富的文字.cpp  9.回文数.cpp  (+1 more)
(+251 files in other folders)
